# explore

./: .gitignore  CMakeLists.txt  README.md
.github/scripts/: check_jellycat.sh
.github/workflows/: check_jellycat.yml  check_jellycat.yml.bak
c++/: CMakeLists.txt
c++/call_tuple/: CMakeLists.txt  call_tuple.h  convert_args.h  main.cpp  print_arg.h  typename.h  utils.h
c++/cpp11clock/: CMakeLists.txt  main.cpp
c++/enable_if_func/: CMakeLists.txt  enable_if_func.cpp
c++/extern_template/: CMakeLists.txt  lib.cpp  lib.h  main.cpp
c++/func_template/: CMakeLists.txt  main.cpp
c++/initializer_list/: CMakeLists.txt  main.cpp
c++/template_template/: CMakeLists.txt  main.cpp
c++/unique_ptr_copy/: CMakeLists.txt  main.cpp
c++/unresolved_member/: CMakeLists.txt  main.cpp
cmake/: AddRun.cmake  CheckAll.cmake  FindLibPython.py  FindNPAPI.cmake  FindPythonLibrary.cmake  GObjectIntrospection.cmake  PythonMacros.cmake  TestWrapper.cmake  TestWrapper.sh
dbus/c-server/: main.c
dbus/server/: server.py
dbus/sys-server/: main.c
elisp/: try.el
fcitx/: CMakeLists.txt
fcitx/objpool/: CMakeLists.txt  main.c
gdk/: CMakeLists.txt
gdk/event_block/: main.c
gdk/keyevent/: CMakeLists.txt  event.c  index.html  main.c
general_c/: CMakeLists.txt
general_c/atomic_aa64/: run.c
general_c/atomics/: atomics.c  atomics_aarch64.s  atomics_armv7l.s  atomics_i686.s  atomics_x64.s  bug.cpp  codegen.md  intrinsics.c  opts.c  test.cpp
general_c/bench_locks/: CMakeLists.txt  main.cpp
general_c/bench_signals/: CMakeLists.txt  main.cpp
general_c/bsearch/: CMakeLists.txt  lib.c  lib.h  main.c
general_c/default_args/: CMakeLists.txt  main.c  main.cpp
general_c/dekker/: CMakeLists.txt  dekker.cpp
general_c/leb128/: CMakeLists.txt  leb128.cpp
general_c/memcmp_dup/: CMakeLists.txt  lib.c  lib.h  main.c
general_c/memcpy/: CMakeLists.txt  lib.c  lib.cpp  lib.h  main.c  main.cpp
general_c/mprotect_mt/: CMakeLists.txt  main.cpp
general_c/offsetof_varary/: CMakeLists.txt  main.c
general_c/omp/: omp.cpp
general_c/printf/: CMakeLists.txt  lib.c  lib.h  main.c
general_c/pwrite_self_mem/: CMakeLists.txt  main.cpp
general_c/realloc/: CMakeLists.txt  main.c
general_c/sig_chld/: main.c
general_c/strcmp_opt/: CMakeLists.txt  main.c
general_c/strdup/: CMakeLists.txt  lib.c  lib.h  main.c
general_c/strlen/: CMakeLists.txt  main.c
general_c/thread_local/: CMakeLists.txt  main.c
general_c/tohex/: CMakeLists.txt  tohex.c
general_c/tostr/: CMakeLists.txt  tostr.c
general_c/va_arg/: CMakeLists.txt  main.c
general_c/write/: CMakeLists.txt  main.c
gi/: CMakeLists.txt
gi/cb_ret/: CMakeLists.txt  mobject.c  mobject.h  test.py
gi/init_hook/: CMakeLists.txt  main.c  mderive.c  mderive.h  mobject.c  mobject.h
gi/kb/: CMakeLists.txt  kb-bibtex.c  kb-bibtex.h
gi/main-program/: CMakeLists.txt  foo.c  foo.h  main.js  main.py
gi/multi_ret/: CMakeLists.txt  foo.c  foo.h  multi_ret.py
gi/non-obj/: CMakeLists.txt  foo.c
gi/out_array/: CMakeLists.txt  foo.c  foo.h  out_array.py
gi/pyinit/: CMakeLists.txt  foo.c  foo.h  pyinit.py
gi/simple/: CMakeLists.txt  mobject.c  mobject.h
gi/virtual/: CMakeLists.txt  mobject.c  mobject.h  test.py
gtk/reparent/: main.c
html/common/: jquery.ba-outside-events.min.js
html/dialog/: dialog.css  dialog.js  index.html
html/empty/: index.html
html/vbuttonset/: buttonset.css  buttonset.js  index.html
jscore/: CMakeLists.txt
jscore/prop_list/: CMakeLists.txt  main.c
jscore/tostring/: CMakeLists.txt  main.c
julia/: .gitignore
julia/aarch64-abi/: broken.ll  broken.s  working.ll  working.s
julia/alloc_useful/: alloc_useful.jl
julia/allocation/: allocation.jl
julia/analyzeconvert/: analyzeconvert.jl
julia/arg_order/: arg_order.jl
julia/arm-blas/: cgemm_aarch64.c
julia/array_prop/: array_prop.jl  main.cpp  propagate.S  propagate.cpp  propagate.h  propagate.ll
julia/ast/: recompile.jl
julia/bench_alloc/: gc.jl
julia/bench_codegen/: codegen.jl  plot.jl  timing.csv
julia/bench_crc32c/: benchmark.jl  master_aarch64.csv  master_armv7.csv  master_i686.csv  master_i686.jl  master_x86-64.csv  plot.jl  pr_aarch64.csv  pr_armv7.csv  pr_i686.csv  pr_i686.jl  pr_x86-64.csv
julia/bench_cstrings/: benchmark-6700k_46.txt  cstrings.jl
julia/bench_simple/: benchmark-10885h.txt  benchmark-4702hq.txt  benchmark-6700k_42.txt  benchmark-6700k_46.txt  benchmark-7950x3d.txt  benchmark-allwinner_a20.txt  benchmark-apple_m1_asahi.txt  benchmark-apple_m1_firestorm_asahi.txt  benchmark-apple_m1_icestorm_asahi.txt  benchmark-apple_m1_parallel.txt  benchmark-apple_m2ultra_avalanche_asahi.txt  benchmark-apple_m2ultra_blizzard_asahi.txt  benchmark-c2750.txt  benchmark-cortex_a57.txt  benchmark-e3_1505m_v6.txt  benchmark-e7_8850.txt  benchmark-exynos_m3.txt  benchmark-graviton3.txt  benchmark-hikey960_a53.txt  benchmark-hikey960_a73.txt  benchmark-jetson_tx1.txt  benchmark-jetson_tx2.txt  benchmark-linode.txt  benchmark-n3530.txt  benchmark-overdrive_3000.txt  benchmark-rk3399.txt  benchmark-sd845.txt  benchmark-sd845_a55.txt  benchmark-sd865.txt  benchmark-sd865_a55.txt  benchmark-thunderx.txt  (+2 more)
kde/: CMakeLists.txt
legacy/: creatmake
libffi/: CMakeLists.txt
lxc/: CMakeLists.txt
npapi/: CMakeLists.txt
opengl/: CMakeLists.txt
preload/: CMakeLists.txt
python/: CMakeLists.txt
qt/: CMakeLists.txt
qt5/: CMakeLists.txt
qt5/dialog/: CMakeLists.txt  main.cpp
qt5/painter/: CMakeLists.txt  main.cpp
qt5/property/: CMakeLists.txt  main.cpp
qt5/qmlwebkit/: qmlwebkit.qml
qt5/quick_control/: CMakeLists.txt  main.cpp  main.qml  main2.qml
qt5/quick_control/content/: Layouts.qml
qt5/test_qml/: test_qml.qmlproject
qt5/translucent-gl/: CMakeLists.txt  main.cpp
qt5/webplugin/: CMakeLists.txt  csvfactory.cpp  csvfactory.h  csvview.cpp  mainwindow.cpp  try.html
qt5/webplugin/simplecsvplugin/: csvfactory.h  csvview.cpp  mainwindow.cpp
qt5/webplugin/simplecsvplugin/pages/: index.html
trycmake/: CMakeLists.txt
verilog/: CMakeLists.txt  addbit.v  adder_hier.v  arbiter.v  zero_queue.sv
xlib/: CMakeLists.txt
(+222 files in other folders)
