cmake_minimum_required(VERSION 2.8)
project(explore)
set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake ${CMAKE_MODULE_PATH})
include(AddRun)

set(CMAKE_C_FLAGS "-Wall -Wextra -Wno-sign-compare -Wno-unused-parameter ${CMAKE_C_FLAGS}")
set(CMAKE_CXX_FLAGS "-Wall -Wextra -Wno-sign-compare -Wno-unused-parameter ${CMAKE_CXX_FLAGS}")
add_definitions("-D_GNU_SOURCE")
include(CheckAll)

message("x${NON_EXISTING_VAR}x")

add_subdirectory(gi)
# add_subdirectory(gdk)
# add_subdirectory(jscore)
add_subdirectory(preload)
# add_subdirectory(libffi)
add_subdirectory(general_c)
add_subdirectory(c++)
add_subdirectory(python)
add_subdirectory(trycmake)
add_subdirectory(xlib)
add_subdirectory(opengl)
add_subdirectory(kde)
add_subdirectory(fcitx)
add_subdirectory(npapi)
add_subdirectory(qt)
add_subdirectory(qt5)
add_subdirectory(lxc)
# add_subdirectory(verilog)
