add_subdirectory(va_arg)
add_subdirectory(realloc)
add_subdirectory(strdup)
add_subdirectory(memcmp_dup)
add_subdirectory(tohex)
add_subdirectory(default_args)
add_subdirectory(strlen)
add_subdirectory(memcpy)
add_subdirectory(thread_local)
add_subdirectory(printf)
add_subdirectory(bsearch)
add_subdirectory(write)
add_subdirectory(tostr)
add_subdirectory(strcmp_opt)
add_subdirectory(offsetof_varary)
add_subdirectory(bench_locks)
add_subdirectory(leb128)
add_subdirectory(bench_signals)
add_subdirectory(dekker)
add_subdirectory(mprotect_mt)
add_subdirectory(pwrite_self_mem)
