project(qt5 C CXX)

find_package(Qt5Core)
if(NOT Qt5Core_FOUND)
  return()
endif()

find_package(Qt5Gui REQUIRED)
find_package(Qt5Widgets REQUIRED)
find_package(Qt5WebKit REQUIRED)
find_package(Qt5WebKitWidgets REQUIRED)
find_package(Qt5Sql REQUIRED)
find_package(Qt5Network REQUIRED)
find_package(Qt5Qml REQUIRED)
find_package(Qt5Quick REQUIRED)
find_package(Qt5OpenGL REQUIRED)

add_subdirectory(webplugin)
add_subdirectory(quick_control)
add_subdirectory(property)
add_subdirectory(translucent-gl)
add_subdirectory(dialog)
