project(qt5 C CXX)

set(qt5_found 1)
macro(find_qt5_package pkg)
  find_package(${pkg})
  if(NOT ${pkg}_FOUND)
    set(qt5_found 1)
  endif()
endmacro()

find_qt5_package(Qt5Core)
find_qt5_package(Qt5Gui)
find_qt5_package(Qt5Widgets)
find_qt5_package(Qt5WebKit)
find_qt5_package(Qt5WebKitWidgets)
find_qt5_package(Qt5Sql)
find_qt5_package(Qt5Network)
find_qt5_package(Qt5Qml)
find_qt5_package(Qt5Quick)
find_qt5_package(Qt5OpenGL)
if(NOT qt5_found)
  return()
endif()

add_subdirectory(webplugin)
add_subdirectory(quick_control)
add_subdirectory(property)
add_subdirectory(translucent-gl)
add_subdirectory(dialog)
